# tradeglance

./: .gitignore  Cargo.toml  README.md
cpp/tg-indicators/: .gitignore  CMakeLists.txt  README.md
cpp/tg-indicators/include/tg_indicators/: bar_codec.h  indicator_service.h
cpp/tg-indicators/include/tg_indicators/indicators/: adx.h  atr.h  bollinger_bands.h  cci.h  ema.h  indicator_base.h  macd.h  obv.h  registry.h  rsi.h  sma.h  stochastic.h  williams_r.h
cpp/tg-indicators/src/: indicator_service.cpp  main.cpp
cpp/tg-indicators/src/indicators/: adx.cpp  atr.cpp  bollinger_bands.cpp  cci.cpp  ema.cpp  macd.cpp  obv.cpp  registry.cpp  rsi.cpp  sma.cpp  stochastic.cpp  williams_r.cpp
cpp/tg-indicators/tests/: indicator_tests.cpp
crates/tg-backtest/: Cargo.toml
crates/tg-backtest/src/: grpc.rs  lib.rs  matcher.rs  perf.rs  replay.rs  runner.rs
crates/tg-backtest/tests/: pg_integration.rs
crates/tg-contracts/: Cargo.toml  build.rs
crates/tg-contracts/proto/tg/v1/: contracts.proto
crates/tg-contracts/src/: enums.rs  error.rs  lib.rs  proto.rs  query.rs  rules.rs  time.rs  types.rs
crates/tg-decision-agent/: Cargo.toml
crates/tg-decision-agent/src/: agents.rs  context.rs  fallback.rs  grpc.rs  lib.rs  llm.rs  logging.rs  main.rs  schema.rs
crates/tg-engine/: Cargo.toml
crates/tg-engine/src/: engine.rs  lib.rs  portfolio.rs  traits.rs
crates/tg-engine/tests/: engine_tests.rs
crates/tg-factor-engine/: Cargo.toml
crates/tg-factor-engine/src/: cross_section.rs  error.rs  evaluate.rs  factor.rs  grpc.rs  lib.rs  main.rs  storage.rs
crates/tg-factor-engine/src/factors/: mod.rs  momentum.rs  moneyflow.rs  reversal.rs  rsi.rs  size.rs  value.rs  volatility.rs  volume.rs
crates/tg-factor-engine/tests/: pg_integration.rs
crates/tg-market-data/: Cargo.toml
crates/tg-market-data/collector-python/: README.md  app.py  requirements.txt
crates/tg-market-data/collector-python/tests/: test_app.py
crates/tg-market-data/config/: watchlist.yaml.example
crates/tg-market-data/src/: cleaning.rs  config.rs  grpc.rs  health.rs  lib.rs  main.rs  rate_limit.rs  sidecar.rs
crates/tg-market-data/src/sync/: mod.rs
crates/tg-market-data/tests/: pg_integration.rs
crates/tg-mock-order-engine/: Cargo.toml
crates/tg-mock-order-engine/src/: account.rs  cost.rs  feed.rs  grpc.rs  handler.rs  lib.rs  main.rs  matcher.rs  risk.rs  rules.rs
crates/tg-mock-order-engine/tests/: pg_integration.rs
crates/tg-persistence/: Cargo.toml  README.md
crates/tg-persistence/migrations/: 20260614000000_phase0_storage.sql  20260614020000_backtest_runs.sql  20260615000000_decisions.sql  20260615010000_orders.sql  20260615010100_fills.sql  20260615010200_account_state.sql
crates/tg-persistence/src/: adjust.rs  lib.rs  model.rs  parquet_io.rs  repo.rs
crates/tg-persistence/tests/: pg_integration.rs
crates/tg-signal-engine/: Cargo.toml
crates/tg-signal-engine/src/: grpc.rs  lib.rs  main.rs  rules.rs  sink.rs  sources.rs
crates/tg-signal-engine/src/strategies/: limitup.rs  mod.rs  swing.rs  t0.rs
docs/superpowers/specs/: 2026-06-14-phase0-data-foundation-design.md  2026-06-14-phase1-analysis-design.md  2026-06-14-phase2-engine-strategy-design.md  2026-06-14-phase3-decision-execution-design.md  2026-06-14-phase4-viz-infra-design.md  2026-06-14-tg-contracts-design.md  2026-06-14-tradeglance-architecture-design.md
market-data/: .gitignore  main.py
market-data/config/: config.py
market-data/src/: akshare_fetcher.py  data_storage.py  db_manager.py
quantization-mcp/: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_REPORT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  config.json
quantization-mcp/docs/: API.md  DEVELOPMENT.md  INDICATORS.md
quantization-mcp/examples/: python_client.py  test_server.sh
quantization-mcp/include/: market_data_source.hpp  mcp_server.hpp  network_data_source.hpp
quantization-mcp/include/compat/: expected.hpp
quantization-mcp/include/indicators/: adx.hpp  atr.hpp  bollinger_bands.hpp  cci.hpp  ema.hpp  indicator_base.hpp  macd.hpp  obv.hpp  rsi.hpp  sma.hpp  stochastic.hpp  williams_r.hpp
quantization-mcp/src/: main.cpp  mcp_server.cpp  network_data_source.cpp
quantization-mcp/src/indicators/: adx.cpp  atr.cpp  bollinger_bands.cpp  cci.cpp  ema.cpp  macd.cpp  obv.cpp  rsi.cpp  sma.cpp  stochastic.cpp  williams_r.cpp
quantization-mcp/tests/: simple_test.py
