[workspace]
resolver = "2"
members = ["crates/tg-contracts"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["TradeGlance"]

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
tonic = "0.8.3"
prost = "0.11.9"
prost-types = "0.11.9"
tonic-build = "0.8.4"
rust_decimal = { version = "1.39.0", default-features = false, features = ["serde", "std"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.8.6"
thiserror = "2.0.18"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
bytes = "1.11.0"

