[package]
name = "tg-backtest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "tg_backtest"
path = "src/lib.rs"

[features]
default = []
pg_integration = ["tg-persistence/pg_integration"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
prost.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tg-contracts.workspace = true
tg-engine = { path = "../tg-engine" }
tg-persistence.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
