[package]
name = "tg-contracts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
prost.workspace = true
prost-types.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
serde_json.workspace = true
