[package]
name = "tg-mock-order-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
pg_integration = ["tg-persistence/pg_integration"]

[lib]
name = "tg_mock_order_engine"
path = "src/lib.rs"

[[bin]]
name = "tg-mock-order-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
prost.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tg-contracts.workspace = true
tg-engine = { path = "../tg-engine" }
tg-persistence.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
