[package]
name = "tg-persistence"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
pg_integration = []

[dependencies]
anyhow.workspace = true
arrow.workspace = true
async-trait.workspace = true
chrono.workspace = true
parquet.workspace = true
rust_decimal.workspace = true
sqlx.workspace = true
tg-contracts.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
